--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
         "jakub-onderka/php-parallel-lint": "^1.0",
         "keboola/coding-standard": "^4.0",
         "keboola/php-temp": "^1.0",
-        "phpstan/phpstan-shim": "^0.9.2",
+        "phpstan/phpstan-shim": "^0.10",
         "phpunit/phpunit": "^7.0",
         "symfony/process": "^4.0",
-        "keboola/datadir-tests": "^2.0"
+        "keboola/datadir-tests": "^2.0",
+        "mockery/mockery": "^1.1",
+        "phpstan/phpstan-mockery": "^0.10"
     },
     "autoload": {
         "psr-4": {
